<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>dev.shvetsova.ewmc</groupId>
        <artifactId>explore-with-me-cloud</artifactId>
        <version>1.0</version>
    </parent>
    <artifactId>ewm-main</artifactId>
    <version>1.0</version>
    <name>ewm-main</name>
    <packaging>pom</packaging>
    <description>ewm-main</description>
    <modules>
        <module>ewm-compilation</module>
        <module>ewm-users</module>
        <module>ewm-event</module>
        <module>ewm-request</module>
        <module>ewm-subscription</module>
        <module>ewm-notification</module>
        <module>ewm-keycloak</module>
    </modules>
    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>dev.shvetsova.ewmc</groupId>
            <artifactId>ewm-dto</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>dev.shvetsova.ewmc</groupId>
            <artifactId>ewm-utils</artifactId>
            <version>1.0</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>3.1.3</version>
            </plugin>
        </plugins>
    </build>

</project>
